--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WattLink — Social Energy Transparency</title>
+  <title>WattLink — Community Energy Transparency</title>
   <link rel="stylesheet" href="style.css"/>
-  <meta name="description" content="See your town's energy mix, savings, and join the community chain. A 2‑week pilot to build trust in energy aggregation."/>
+  <meta name="description" content="See your town's supplier, status, utility, energy mix, rates, savings, community chain, and collective impact."/>
 </head>
 <body>
   <header class="wl-header">
@@ -15,9 +15,9 @@
         <div class="name">WattLink</div>
       </div>
       <nav class="nav">
-        <a href="#how">How it works</a>
-        <a href="#viz">Your mix</a>
-        <a href="#chain">Community chain</a>
+        <a href="#snapshot">Snapshot</a>
+        <a href="#viz">Mix & Rates</a>
+        <a href="#chain">Community</a>
       </nav>
     </div>
   </header>
@@ -25,18 +25,18 @@
   <main class="wrap">
     <section class="hero">
       <div class="hero-left">
-        <h1>Make energy aggregation <span class="accent">visible</span>, <span class="accent">social</span>, and <span class="accent">trustworthy</span>.</h1>
-        <p class="sub">Enter your ZIP to see your community's energy mix, estimated savings from aggregation, and your share of clean power. Generate a share card and add your name to the chain.</p>
+        <h1>Transparent community energy — at a glance.</h1>
+        <p class="sub">Enter your ZIP to view your <strong>supplier</strong>, <strong>status</strong> (aggregation member or not), <strong>utility</strong>, <strong>energy mix</strong>, <strong>rates & savings</strong>, <strong>community chain</strong>, and <strong>collective impact</strong>.</p>
         <form id="zipForm" class="zip-form">
           <label for="zip">ZIP code</label>
           <input id="zip" name="zip" inputmode="numeric" minlength="5" maxlength="5" placeholder="e.g., 43210" required/>
-          <button type="submit" class="btn primary">View my mix</button>
-          <button id="shareBtn" type="button" class="btn ghost">Generate share card</button>
+          <button type="submit" class="btn primary">Update</button>
+          <button id="shareBtn" type="button" class="btn ghost">Share card</button>
         </form>
-        <div class="hero-badges" id="heroBadges">
-          <span class="badge">No app required</span>
-          <span class="badge">Transparent by design</span>
-          <span class="badge">2‑week pilot</span>
+        <div class="hero-badges">
+          <span class="badge">Supplier & Status</span>
+          <span class="badge">Rates & Savings</span>
+          <span class="badge">Collective Impact</span>
         </div>
       </div>
       <div class="hero-right">
@@ -46,31 +46,70 @@
             <div class="phone-card">
               <h3>Your ZIP</h3>
               <div id="mockZip">—</div>
-              <div class="sparkline" id="sparkline"></div>
-              <div class="mix-legend" id="mixLegend"></div>
+              <div class="mini-stats">
+                <div><span class="k">Supplier</span><span id="miniSupplier">—</span></div>
+                <div><span class="k">Status</span><span id="miniStatus">—</span></div>
+                <div><span class="k">Utility</span><span id="miniUtility">—</span></div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="how" class="how">
-      <h2>How it works</h2>
-      <ol class="steps">
-        <li>Scan a QR or enter ZIP</li>
-        <li>See your town’s energy mix and savings</li>
-        <li>Join WattLink and get your share card</li>
-        <li>Share to grow the <strong>Community Chain</strong></li>
-      </ol>
+    <section id="snapshot" class="snapshot">
+      <h2>Community Snapshot</h2>
+      <div class="grid-cards" id="snapshotGrid">
+        <div class="card stat">
+          <div class="k">Supplier</div>
+          <div class="v" id="supplier">—</div>
+          <div class="hint">Retail supplier serving your community</div>
+        </div>
+        <div class="card stat">
+          <div class="k">Status</div>
+          <div class="v" id="status">—</div>
+          <div class="hint">Aggregation member or not</div>
+        </div>
+        <div class="card stat">
+          <div class="k">Utility Company</div>
+          <div class="v" id="utility">—</div>
+          <div class="hint">Wires company that delivers power</div>
+        </div>
+        <div class="card stat">
+          <div class="k">Energy Mix</div>
+          <div class="v"><span id="mixRenew">—</span> renewable / <span id="mixConv">—</span> conventional</div>
+          <div class="hint">Renewable = solar·wind·hydro</div>
+        </div>
+        <div class="card stat">
+          <div class="k">Average Community Rate</div>
+          <div class="v"><span id="commRate">—</span>¢/kWh</div>
+          <div class="hint">Compared to typical market rate</div>
+        </div>
+        <div class="card stat">
+          <div class="k">Typical Market Rate</div>
+          <div class="v"><span id="mktRate">—</span>¢/kWh</div>
+          <div class="hint">Recent average in your area</div>
+        </div>
+        <div class="card stat good">
+          <div class="k">Savings per Household</div>
+          <div class="v">$<span id="savingsHH">—</span>/yr</div>
+          <div class="hint">Based on est. annual usage</div>
+        </div>
+        <div class="card stat accent">
+          <div class="k">Collective Impact</div>
+          <div class="v">$<span id="collectiveSavings">—</span> saved · <span id="collectiveCO2">—</span> t CO₂ avoided</div>
+          <div class="hint">Community-wide, estimated</div>
+        </div>
+      </div>
     </section>
 
     <section id="viz" class="viz">
       <div class="viz-left">
-        <h2>Your Energy Mix</h2>
+        <h2>Energy Mix & Rates</h2>
         <div class="statline">
-          <div><strong>Clean Share:</strong> <span id="cleanShare">—</span></div>
-          <div><strong>Est. Annual Savings:</strong> <span id="savings">$—</span></div>
-          <div><strong>CO₂ Avoided:</strong> <span id="co2">— tons</span></div>
+          <div><strong>Clean Share (incl. nuclear):</strong> <span id="cleanShare">—</span></div>
+          <div><strong>Renewable Only:</strong> <span id="renewOnly">—</span></div>
+          <div><strong>CO₂ Avoided/HH:</strong> <span id="co2HH">— tons</span></div>
         </div>
         <div class="svg-wrap">
           <svg id="mixViz" width="420" height="280" role="img" aria-label="Energy mix bubble visualization"></svg>
@@ -79,11 +118,10 @@
       <div class="viz-right">
         <div class="card">
           <h3>Personalized Share Card</h3>
-          <p>Generate a PNG you can post anywhere. Includes your ZIP, clean share, and today’s date.</p>
+          <p>Create a PNG with supplier, status, rates, savings, and renewable share.</p>
           <button id="makeCard" class="btn primary full">Generate & Download</button>
           <canvas id="cardCanvas" width="1080" height="1350" class="hidden"></canvas>
           <a id="downloadLink" class="btn secondary full hidden" download>Download PNG</a>
-          <p class="hint">Tip: On mobile, use the <em>Share</em> button after download to post to Instagram or messages.</p>
         </div>
       </div>
     </section>
@@ -97,8 +135,8 @@
 
   <footer class="wl-footer">
     <div class="wrap footer-wrap">
-      <div>© <span id="year"></span> WattLink — Pilot concept for youth energy transparency.</div>
-      <div class="smallprint">Not an official utility. Data visualizations are approximate for demo purposes.</div>
+      <div>© <span id="year"></span> WattLink — Pilot concept for community energy transparency.</div>
+      <div class="smallprint">Not an official utility. Demo data for prototyping only.</div>
     </div>
   </footer>
 
