--- a/index.html
+++ b/index.html
@@ -1,59 +1,211 @@
-<!-- Updated WattLink site preview with blue-highlighted title and compact share card -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WattLink — Making Energy Aggregation Visible, Trustworthy, and Social</title>
-  <style>
-:root{
-  --blue: #6ee7ff;
-  --bg: #0b0d12; --card: #121723; --muted: #8891a7; --text: #e6ecff; --accent: #6ee7ff; --accent-2: #7c4dff; --border: #1f2636; --good: #52ffa8;
-}
-body { background: var(--bg); color: var(--text); font-family: system-ui, sans-serif; margin:0; }
-.wrap { width: min(1100px, 92vw); margin: 0 auto; }
-header { background: rgba(11,13,18,.8); border-bottom: 1px solid var(--border); backdrop-filter: blur(6px); position: sticky; top:0; z-index:9; }
-header .wrap { display:flex; align-items:center; justify-content:space-between; padding:12px 0; }
-.hero { padding:60px 0; text-align:center; }
-.hero h1 { font-size:clamp(28px,3.2vw,42px); line-height:1.1; }
-.hero h1 .blue { color: var(--blue); }
-.hero p { color: var(--muted); max-width:640px; margin:10px auto 0; }
-section { margin:40px 0; }
-.viz-right .card { max-width: 360px; margin:auto; padding:16px; border:1px solid var(--border); border-radius:16px; background:var(--card); }
-.viz-right .card h3 { margin-top:0; }
-.viz-right .card p { font-size:14px; color:var(--muted); }
-.viz-right .card button { width:100%; padding:10px 0; background:linear-gradient(135deg,rgba(110,231,255,.18),rgba(124,77,255,.18)); color:var(--text); border:none; border-radius:10px; cursor:pointer; }
-footer { border-top:1px solid var(--border); padding:20px 0; text-align:center; font-size:14px; color:var(--muted); }
-  </style>
+  <title>WattWise — Making Energy Aggregation Visible, Trustworthy, and Social</title>
+  <link rel="stylesheet" href="style.css"/>
+  <meta name="description" content="See your community’s supplier, status, utility, energy mix, rates, savings, and collective impact. A WattLink campaign on the WattWise website."/>
 </head>
 <body>
-  <header>
+  <header class="wl-header">
     <div class="wrap">
-      <div class="brand"><span style="font-size:24px;">⚡</span> <strong>WattLink</strong></div>
+      <div class="brand">
+        <div class="logo">⚡</div>
+        <div class="name">WattWise</div>
+      </div>
+      <nav class="nav">
+        <a href="#how">How it works</a>
+        <a href="#viz">Your mix</a>
+        <a href="#chain">Community chain</a>
+      </nav>
     </div>
   </header>
 
   <main class="wrap">
     <section class="hero">
-      <h1>Making Energy Aggregation <span class="blue">Visible</span>, <span class="blue">Trustworthy</span>, and <span class="blue">Social</span>.</h1>
-      <p>View your supplier, aggregation status, utility, energy mix, community savings, and impact — all in one transparent dashboard.</p>
-    </section>
+      <div class="hero-left">
+        <h1>
+          Making Energy Aggregation
+          <span class="accent blue">Visible</span>,
+          <span class="accent blue">Trustworthy</span>, and
+          <span class="accent blue">Social</span>.
+        </h1>
+        <p class="sub">
+          Enter your ZIP to see your community’s supplier, status, utility, energy mix, rates vs. market, estimated savings per household, and your community’s collective impact. Generate a share card and add your name to the chain.
+        </p>
+        <form id="zipForm" class="zip-form">
+          <label for="zip">ZIP code</label>
+          <input id="zip" name="zip" inputmode="numeric" minlength="5" maxlength="5" placeholder="e.g., 43210" required/>
+          <button type="submit" class="btn primary">View my mix</button>
+          <button id="shareBtn" type="button" class="btn ghost">Generate share card</button>
+        </form>
+        <div class="hero-badges" id="heroBadges">
+          <span class="badge">No app required</span>
+          <span class="badge">Transparent by design</span>
+          <span class="badge">2-week WattLink pilot</span>
+        </div>
+      </div>
 
-    <section class="viz">
-      <div class="viz-right">
-        <div class="card">
-          <h3>Personalized Share Card</h3>
-          <p>Create a small, shareable image summarizing your community’s clean-energy progress.</p>
-          <button>Generate & Download</button>
+      <div class="hero-right">
+        <div class="phone">
+          <div class="phone-notch"></div>
+          <div class="phone-screen">
+            <div class="phone-card">
+              <div class="pc-head">
+                <h3 class="pc-title">Your ZIP</h3>
+                <div id="mockZip" class="pc-zip">—</div>
+              </div>
+
+              <!-- Compact summary rows inside the phone -->
+              <div class="kv-row">
+                <span class="kv-label">Supplier</span>
+                <span class="kv-value" id="p_supplier">—</span>
+              </div>
+              <div class="kv-row">
+                <span class="kv-label">Status</span>
+                <span class="kv-value"><span class="chip" id="p_status">—</span></span>
+              </div>
+              <div class="kv-row">
+                <span class="kv-label">Utility</span>
+                <span class="kv-value" id="p_utility">—</span>
+              </div>
+              <div class="kv-row">
+                <span class="kv-label">Clean Share</span>
+                <span class="kv-value" id="p_cleanShare">—</span>
+              </div>
+              <div class="kv-row">
+                <span class="kv-label">Rate vs Market</span>
+                <span class="kv-value"><span id="p_commRate">—</span> vs <span id="p_marketRate">—</span></span>
+              </div>
+              <div class="kv-row">
+                <span class="kv-label">Savings/HH</span>
+                <span class="kv-value" id="p_hhSavings">—</span>
+              </div>
+
+              <div class="sparkline" id="sparkline"></div>
+              <div class="mix-legend" id="mixLegend"></div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
+    <section id="how" class="how">
+      <h2>How it works</h2>
+      <ol class="steps">
+        <li>Scan a QR or enter ZIP</li>
+        <li>See your town’s supplier, status, energy mix & rates</li>
+        <li>Join the WattLink campaign and get your share card</li>
+        <li>Share to grow the <strong>Community Chain</strong></li>
+      </ol>
+    </section>
+
+    <section id="viz" class="viz">
+      <div class="viz-left">
+        <h2>Your Energy Mix</h2>
+
+        <!-- Stat line retained -->
+        <div class="statline">
+          <div><strong>Clean Share:</strong> <span id="cleanShare">—</span></div>
+          <div><strong>Est. Annual Savings:</strong> <span id="savings">$—</span></div>
+          <div><strong>CO₂ Avoided:</strong> <span id="co2">— tons</span></div>
+        </div>
+
+        <div class="svg-wrap">
+          <svg id="mixViz" width="420" height="280" role="img" aria-label="Energy mix bubble visualization"></svg>
+        </div>
+
+        <!-- NEW: Data dashboard panel -->
+        <div class="grid cards mt16" aria-label="Community Energy Details">
+          <div class="card">
+            <h3>Supplier</h3>
+            <div class="bigline" id="supplierName">—</div>
+            <div class="muted" id="supplierNote">Supplier for your aggregation program (if applicable).</div>
+          </div>
+
+          <div class="card">
+            <h3>Status</h3>
+            <div class="bigline"><span class="chip" id="statusTag">—</span></div>
+            <div class="muted">Aggregation member or not.</div>
+          </div>
+
+          <div class="card">
+            <h3>Utility Company</h3>
+            <div class="bigline" id="utilityName">—</div>
+            <div class="muted">Your default local electric distribution utility.</div>
+          </div>
+
+          <div class="card">
+            <h3>Energy Mix</h3>
+            <div class="kv duo">
+              <div><span class="kv-label">Renewable</span><span class="kv-value" id="mixRenewPct">—</span></div>
+              <div><span class="kv-label">Conventional</span><span class="kv-value" id="mixConvPct">—</span></div>
+            </div>
+            <div class="muted">Breakout shown in chart above.</div>
+          </div>
+
+          <div class="card">
+            <h3>Rates</h3>
+            <div class="kv duo">
+              <div><span class="kv-label">Community Rate</span><span class="kv-value" id="communityRate">—</span></div>
+              <div><span class="kv-label">Typical Market</span><span class="kv-value" id="marketRate">—</span></div>
+            </div>
+            <div class="muted">¢/kWh, approximate demo values.</div>
+          </div>
+
+          <div class="card">
+            <h3>Savings per Household</h3>
+            <div class="bigline" id="hhSavings">—</div>
+            <div class="muted">Based on average usage assumptions.</div>
+          </div>
+
+          <div class="card">
+            <h3>Community Energy Chain</h3>
+            <div class="muted">Each share links a neighbor. See the chain below.</div>
+            <div id="chainMini" class="chain-viz mini"></div>
+          </div>
+
+          <div class="card">
+            <h3>Collective Impact</h3>
+            <div class="kv trio">
+              <div><span class="kv-label">Participants</span><span class="kv-value" id="impactParticipants">—</span></div>
+              <div><span class="kv-label">Total Savings</span><span class="kv-value" id="impactSavings">—</span></div>
+              <div><span class="kv-label">CO₂ Avoided</span><span class="kv-value" id="impactCO2">—</span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Share Card area made smaller/cleaner -->
+      <div class="viz-right">
+        <div class="card compact">
+          <h3>Personalized Share Card</h3>
+          <p class="muted small">
+            Generate a PNG with your ZIP, supplier, clean share, and savings. (Compact area.)
+          </p>
+          <button id="makeCard" class="btn primary full">Generate & Download</button>
+          <canvas id="cardCanvas" width="1080" height="1080" class="hidden"></canvas>
+          <a id="downloadLink" class="btn secondary full hidden" download>Download PNG</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="chain" class="chain">
+      <h2>Community Chain</h2>
+      <p>Every share adds a link to the chain. Invite friends to connect their <em>watt</em>.</p>
+      <div id="chainViz" class="chain-viz"></div>
+    </section>
   </main>
 
-  <footer>
-    © <span id="year"></span> WattLink — Prototype for community energy transparency.<br/>
-    <small>Visit <strong>wattwise-theta.vercel.app</strong></small>
+  <footer class="wl-footer">
+    <div class="wrap footer-wrap">
+      <div>© <span id="year"></span> WattWise — <span class="muted">WattLink campaign pilot for youth energy transparency.</span></div>
+      <div class="smallprint">Not an official utility. Demo data for visualization.</div>
+    </div>
   </footer>
-  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
+
+  <script src="app.js"></script>
 </body>
 </html>
+
