--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>WattWise — Making Energy Aggregation Visible, Trustworthy, and Social</title>
   <link rel="stylesheet" href="style.css"/>
-  <meta name="description" content="See your community’s supplier, status, utility, energy mix, rates, savings, and collective impact. A WattLink campaign on the WattWise website."/>
 </head>
 <body>
   <header class="wl-header">
@@ -32,7 +31,7 @@
           <span class="accent blue">Social</span>.
         </h1>
         <p class="sub">
-          Enter your ZIP to see your community’s supplier, status, utility, energy mix, rates vs. market, estimated savings per household, and your community’s collective impact. Generate a share card and add your name to the chain.
+          Enter your ZIP to see your community’s supplier, status, utility, energy mix, rates vs. market, estimated savings per household, and your community’s collective impact.
         </p>
         <form id="zipForm" class="zip-form">
           <label for="zip">ZIP code</label>
@@ -40,7 +39,7 @@
           <button type="submit" class="btn primary">View my mix</button>
           <button id="shareBtn" type="button" class="btn ghost">Generate share card</button>
         </form>
-        <div class="hero-badges" id="heroBadges">
+        <div class="hero-badges">
           <span class="badge">No app required</span>
           <span class="badge">Transparent by design</span>
           <span class="badge">2-week WattLink pilot</span>
@@ -52,38 +51,16 @@
           <div class="phone-notch"></div>
           <div class="phone-screen">
             <div class="phone-card">
-              <div class="pc-head">
-                <h3 class="pc-title">Your ZIP</h3>
-                <div id="mockZip" class="pc-zip">—</div>
-              </div>
-
-              <!-- Compact summary rows inside the phone -->
-              <div class="kv-row">
-                <span class="kv-label">Supplier</span>
-                <span class="kv-value" id="p_supplier">—</span>
-              </div>
-              <div class="kv-row">
-                <span class="kv-label">Status</span>
-                <span class="kv-value"><span class="chip" id="p_status">—</span></span>
-              </div>
-              <div class="kv-row">
-                <span class="kv-label">Utility</span>
-                <span class="kv-value" id="p_utility">—</span>
-              </div>
-              <div class="kv-row">
-                <span class="kv-label">Clean Share</span>
-                <span class="kv-value" id="p_cleanShare">—</span>
-              </div>
-              <div class="kv-row">
-                <span class="kv-label">Rate vs Market</span>
-                <span class="kv-value"><span id="p_commRate">—</span> vs <span id="p_marketRate">—</span></span>
-              </div>
-              <div class="kv-row">
-                <span class="kv-label">Savings/HH</span>
-                <span class="kv-value" id="p_hhSavings">—</span>
-              </div>
-
-              <div class="sparkline" id="sparkline"></div>
+              <h3>Your ZIP</h3>
+              <div id="mockZip" class="pc-zip">—</div>
+              <ul class="phone-list">
+                <li><strong>Supplier:</strong> <span id="p_supplier">—</span></li>
+                <li><strong>Status:</strong> <span id="p_status">—</span></li>
+                <li><strong>Utility:</strong> <span id="p_utility">—</span></li>
+                <li><strong>Clean Share:</strong> <span id="p_cleanShare">—</span></li>
+                <li><strong>Rate vs Market:</strong> <span id="p_commRate">—</span> / <span id="p_marketRate">—</span></li>
+                <li><strong>Savings/HH:</strong> <span id="p_hhSavings">—</span></li>
+              </ul>
               <div class="mix-legend" id="mixLegend"></div>
             </div>
           </div>
@@ -95,7 +72,7 @@
       <h2>How it works</h2>
       <ol class="steps">
         <li>Scan a QR or enter ZIP</li>
-        <li>See your town’s supplier, status, energy mix & rates</li>
+        <li>See your town’s supplier, status, and energy mix</li>
         <li>Join the WattLink campaign and get your share card</li>
         <li>Share to grow the <strong>Community Chain</strong></li>
       </ol>
@@ -104,8 +81,6 @@
     <section id="viz" class="viz">
       <div class="viz-left">
         <h2>Your Energy Mix</h2>
-
-        <!-- Stat line retained -->
         <div class="statline">
           <div><strong>Clean Share:</strong> <span id="cleanShare">—</span></div>
           <div><strong>Est. Annual Savings:</strong> <span id="savings">$—</span></div>
@@ -113,77 +88,47 @@
         </div>
 
         <div class="svg-wrap">
-          <svg id="mixViz" width="420" height="280" role="img" aria-label="Energy mix bubble visualization"></svg>
+          <svg id="mixViz" width="420" height="280"></svg>
         </div>
 
-        <!-- NEW: Data dashboard panel -->
-        <div class="grid cards mt16" aria-label="Community Energy Details">
+        <div class="grid cards">
           <div class="card">
             <h3>Supplier</h3>
-            <div class="bigline" id="supplierName">—</div>
-            <div class="muted" id="supplierNote">Supplier for your aggregation program (if applicable).</div>
+            <div id="supplierName" class="bigline">—</div>
           </div>
-
           <div class="card">
             <h3>Status</h3>
-            <div class="bigline"><span class="chip" id="statusTag">—</span></div>
-            <div class="muted">Aggregation member or not.</div>
+            <div id="statusTag" class="bigline">—</div>
           </div>
-
           <div class="card">
             <h3>Utility Company</h3>
-            <div class="bigline" id="utilityName">—</div>
-            <div class="muted">Your default local electric distribution utility.</div>
+            <div id="utilityName" class="bigline">—</div>
           </div>
-
           <div class="card">
             <h3>Energy Mix</h3>
-            <div class="kv duo">
-              <div><span class="kv-label">Renewable</span><span class="kv-value" id="mixRenewPct">—</span></div>
-              <div><span class="kv-label">Conventional</span><span class="kv-value" id="mixConvPct">—</span></div>
-            </div>
-            <div class="muted">Breakout shown in chart above.</div>
+            <div>Renewable <span id="mixRenewPct">—</span> • Conventional <span id="mixConvPct">—</span></div>
           </div>
-
           <div class="card">
             <h3>Rates</h3>
-            <div class="kv duo">
-              <div><span class="kv-label">Community Rate</span><span class="kv-value" id="communityRate">—</span></div>
-              <div><span class="kv-label">Typical Market</span><span class="kv-value" id="marketRate">—</span></div>
-            </div>
-            <div class="muted">¢/kWh, approximate demo values.</div>
+            <div>Community <span id="communityRate">—</span> • Market <span id="marketRate">—</span></div>
           </div>
-
           <div class="card">
             <h3>Savings per Household</h3>
-            <div class="bigline" id="hhSavings">—</div>
-            <div class="muted">Based on average usage assumptions.</div>
+            <div id="hhSavings" class="bigline">—</div>
           </div>
-
-          <div class="card">
-            <h3>Community Energy Chain</h3>
-            <div class="muted">Each share links a neighbor. See the chain below.</div>
-            <div id="chainMini" class="chain-viz mini"></div>
-          </div>
-
           <div class="card">
             <h3>Collective Impact</h3>
-            <div class="kv trio">
-              <div><span class="kv-label">Participants</span><span class="kv-value" id="impactParticipants">—</span></div>
-              <div><span class="kv-label">Total Savings</span><span class="kv-value" id="impactSavings">—</span></div>
-              <div><span class="kv-label">CO₂ Avoided</span><span class="kv-value" id="impactCO2">—</span></div>
-            </div>
+            <div class="impact-row"><strong>Participants:</strong> <span id="impactParticipants">—</span></div>
+            <div class="impact-row"><strong>Total Savings:</strong> <span id="impactSavings">—</span></div>
+            <div class="impact-row"><strong>CO₂ Avoided:</strong> <span id="impactCO2">—</span></div>
           </div>
         </div>
       </div>
 
-      <!-- Share Card area made smaller/cleaner -->
       <div class="viz-right">
         <div class="card compact">
           <h3>Personalized Share Card</h3>
-          <p class="muted small">
-            Generate a PNG with your ZIP, supplier, clean share, and savings. (Compact area.)
-          </p>
+          <p class="muted small">Generate a PNG with all your community’s key metrics.</p>
           <button id="makeCard" class="btn primary full">Generate & Download</button>
           <canvas id="cardCanvas" width="1080" height="1080" class="hidden"></canvas>
           <a id="downloadLink" class="btn secondary full hidden" download>Download PNG</a>
@@ -200,12 +145,12 @@
 
   <footer class="wl-footer">
     <div class="wrap footer-wrap">
-      <div>© <span id="year"></span> WattWise — <span class="muted">WattLink campaign pilot for youth energy transparency.</span></div>
-      <div class="smallprint">Not an official utility. Demo data for visualization.</div>
+      <div>© <span id="year"></span> WattWise — WattLink campaign pilot for youth energy transparency.</div>
     </div>
   </footer>
 
   <script src="app.js"></script>
 </body>
 </html>
+
 
