--- a/index.html
+++ b/index.html
@@ -145,12 +145,10 @@
 
   <footer class="wl-footer">
     <div class="wrap footer-wrap">
-      <div>© <span id="year"></span> WattWise — WattLink campaign pilot for youth energy transparency.</div>
+      <div>© <span id="year"></span> WattWise — WattLink campaign pilot</div>
     </div>
   </footer>
 
   <script src="app.js"></script>
 </body>
 </html>
-
-
